# GlueMaid

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
GlueMaidJUCE/: CMakeLists.txt  README.md
GlueMaidJUCE/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: TECHNICAL_AUDIT.md
tests/: reference_notes.md
